--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -1,4 +1,4 @@
-.ui.borderless.topmenu.menu {
+.ui.menu.topmenu {
   box-shadow: none;
   border: none;
 }
@@ -15,8 +15,17 @@
   color: white;
 }
 
+.vertical {
+  height: 500px;
+  vertical-align: center;
+}
+
 .right.floated.center.aligned.hbtitle.column {
   padding-top: 300px;
+}
+
+.middle-text {
+  color:white;
 }
 
 .footer-background {
@@ -25,4 +34,3 @@
   padding-top: 20px;
   padding-bottom: 20px;
 }
-
